src/objects/PDFtoVFP_Error_Log__c.object
<CustomObject>
    <description>This logs errors for the PDF to VFP Converter so it&apos;s easy to debug.</description>
    <fields>
        <fullName>Date_of_Error__c</fullName>
        <description>The date/time that the error occured.</description>
        <inlineHelpText>The date/time that the error occured.</inlineHelpText>
        <label>Date of Error</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Error__c</fullName>
        <description>The error we received from the server when trying take an action.</description>
        <inlineHelpText>The error we received from the server when trying take an action.</inlineHelpText>
        <label>Internal Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Attempted__c</fullName>
        <description>This is the operation we attempted that resulted in an error.</description>
        <inlineHelpText>This is the operation we attempted that resulted in an error.</inlineHelpText>
        <label>Operation Attempted</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Record_List__c</fullName>
        <description>If we are altering a list of records, log it so we can compare and contrast the list updates.</description>
        <inlineHelpText>If we are altering a list of records, log it so we can compare and contrast the list updates.</inlineHelpText>
        <label>Original Record List</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>PDFtoVFP Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Error__c</columns>
        <columns>Internal_Error__c</columns>
        <columns>Operation_Attempted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ELOG-{000000}</displayFormat>
        <label>PDFtoVFP Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDFtoVFP Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>